--- a/aora/pubspec.yaml
+++ b/aora/pubspec.yaml
@@ -41,6 +41,9 @@ dependencies:
   dartz: ^0.10.1
   flutter_svg: ^2.0.17
   flutter_bloc: ^9.0.0
+  get_it: ^8.0.3
+  dio: ^5.8.0+1
+  go_router: ^14.8.0
 
 dev_dependencies:
   flutter_test:
