--- a/aora/pubspec.yaml
+++ b/aora/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   get_it: ^8.0.3
   dio: ^5.8.0+1
   go_router: ^14.8.0
+  chewie: ^1.10.0
+  video_player: ^2.9.3
 
 dev_dependencies:
   flutter_test:
@@ -70,6 +72,10 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/svgs/logo.svg
+    - assets/images/default.jpg
+    - assets/images/avatar.jpg
+
+
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
